Upgrade to Spring 3.4